--- a/style.css
+++ b/style.css
@@ -7,24 +7,32 @@ body {
 #barranavegacio ul {
     display: flex;
     align-items: center;
-    background-color: red;
+    background-color: rgb(236, 236, 236);
     list-style: none;
-    height: 80px;
+    height: 70px;
     width:auto;
     margin: 0px;
     justify-content: center;
+    border-radius: 100px;
+    margin: 15px;
 }
 
 #barranavegacio li {
+    display: block;
+    text-decoration: none;
     padding: 10px;
     margin: 20px;
 }
 
 #barranavegacio a {
-    color: white;
+    display: block;
+    color: black;
     text-decoration:none;
     font-size: large;
+    padding: 10px;
 }
 #barranavegacio a:hover {
-    color: black;
+    background-color: red;
+    color: white;
+    width: 5px;
 }
