--- a/style.css
+++ b/style.css
@@ -3,37 +3,41 @@ body {
     margin: 0px;
 }
 
-
-#barranavegacio ul {
+#barranavegacio {
     display: flex;
+    justify-content: center;
     align-items: center;
     background-color: rgb(236, 236, 236);
-    list-style: none;
-    height: 70px;
-    width:auto;
-    margin: 0px;
-    justify-content: center;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
     border-radius: 100px;
     margin: 15px;
+    height: 70px;
+    width:auto;
 }
 
-#barranavegacio li {
-    display: block;
-    text-decoration: none;
-    padding: 10px;
-    margin: 20px;
+#logo {
+    margin-right: 50px;
+}
+
+#barranavegacio ul {
+    list-style: none;
+    display: flex;
+    gap: 50px;
+    margin: 0;
+    padding: 0;
 }
 
 #barranavegacio a {
-    display: block;
     color: black;
     text-decoration:none;
     font-size: large;
-    padding: 10px;
+    padding: 10px
 }
 #barranavegacio a:hover {
     background-color: red;
     color: white;
-    width: 5px;
-    padding: 10px;
+    border-radius: 100px;
 }
+
+
+
