--- a/style.css
+++ b/style.css
@@ -40,4 +40,25 @@ body {
 }
 
 
+#titol {
+    max-width: 90%;
+    margin: 5% auto;
+    padding: 3%; 
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
+}
+
+h2 {
+    text-align: center;
+    color: red;
+    font-size: 50px;
+}
+
+p {
+    text-align: center;
+    color: red;
+    font-size: 20px;
+}
+
 
