--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     margin: 0px;
 }
 
-#barranavegacio {
+.barranavegacio {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,11 +15,11 @@ body {
     width:auto;
 }
 
-#logo {
+.logo {
     margin-right: 50px;
 }
 
-#barranavegacio ul {
+.barranavegacio ul {
     list-style: none;
     display: flex;
     gap: 50px;
@@ -27,20 +27,19 @@ body {
     padding: 0;
 }
 
-#barranavegacio a {
+.barranavegacio a {
     color: black;
     text-decoration:none;
     font-size: large;
     padding: 10px
 }
-#barranavegacio a:hover {
+.barranavegacio a:hover {
     background-color: red;
     color: white;
     border-radius: 100px;
 }
 
-
-#titol {
+.encapçalament {
     max-width: 90%;
     margin: 5% auto;
     padding: 3%; 
@@ -49,16 +48,121 @@ body {
     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 }
 
-h2 {
+.titol {
     text-align: center;
     color: red;
     font-size: 50px;
 }
 
-p {
+.subtitol {
     text-align: center;
     color: red;
     font-size: 20px;
 }
+
+.targetes {
+    max-width: 90%;
+    margin: 5% auto;
+    padding: 3%; 
+    background-color: #f2f2f2;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
+    display: flex;
+    align-items: stretch;
+}
+
+
+.targeta {
+    width: 45%;
+    height: 45%;
+    background: #f9f9f9;
+    border: 1px solid rgb(202, 202, 202);
+    border-radius: 10px;
+    padding: 40px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    text-align: center;
+    margin: 10px;
+    flex: 1;
+}
+
+.targeta img {
+    width: 80%;
+    height: auto;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+}
+
+.targeta img:hover {
+    transform: scale(1.1);
+}
+
+.descripcio {
+    text-align: justify;
+}
+
+.boto {
+    display: inline-block;
+    padding: 10px;
+    width: 140px;
+    background: red;
+    color: white;
+    text-decoration: none;
+    border-radius: 100px;
+    margin-top: 10px;
+    transition: transform 0.3s ease;
+}
+
+.boto:hover {
+    transform: scale(1.1);
+}
+
+.footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-items: center;
+  background: #333;
+  color: #fff;
+  padding: 15px 30px;
+}
+
+.footertitol h3 {
+  margin: 0;
+}
+
+.xarxessocials a img {
+  width: 24px;   /* tamaño de iconos */
+  margin: 0 8px;
+}
+
+.linksutils a {
+  color: #fff;
+  text-decoration: none;
+  margin-left: 15px;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.linksutils a:hover {
+  text-decoration: underline;
+}
+
+
+@media (max-width: 768px) {
+  .targetes {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .targeta {
+    width: 90%;
+  }
+}
+
+
 
 
