--- a/style.css
+++ b/style.css
@@ -121,34 +121,41 @@ body {
 }
 
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  align-items: center;
-  background: #333;
-  color: #fff;
-  padding: 15px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-items: center;
+    background: #f2f2f2;
+    color: #fff;
+    padding: 15px 30px;
+    box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
 }
 
 .footertitol h3 {
-  margin: 0;
+    margin: 0;
+    color: red;
+    font-size: 45px;
 }
 
 .xarxessocials a img {
-  width: 24px;   /* tamaño de iconos */
-  margin: 0 8px;
+    width: 24px;
+    margin: 0 8px;
 }
 
 .linksutils a {
-  color: #fff;
-  text-decoration: none;
-  margin-left: 15px;
-  flex-direction: column;
-  align-items: flex-end;
+    color: black;
+    text-decoration: none;
+    margin-left: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start;
+    margin-bottom: 5px;
+    transition: transform 0.3s ease;
 }
 
 .linksutils a:hover {
-  text-decoration: underline;
+    text-decoration: none;
+    transform: scale(1.1);
 }
 
 
