--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 
 .barranavegacio {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     background-color: rgb(236, 236, 236);
     box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
@@ -23,7 +23,7 @@ body {
 }
 
 .logo {
-    margin-right: 50px;
+    margin-left: 100px;
 }
 
 .barranavegacio ul {
@@ -32,10 +32,12 @@ body {
     gap: 50px;
     margin: 0;
     padding: 0;
+    margin-right: 50px;
 }
 
 .barranavegacio a {
     color: black;
+    margin-right: 30px;
     text-decoration:none;
     font-size: large;
     padding: 10px
@@ -44,6 +46,12 @@ body {
     background-color: red;
     color: white;
     border-radius: 100px;
+}
+
+.hamburguesa {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
 }
 
 .encapçalament {
@@ -167,14 +175,36 @@ body {
 
 
 @media (max-width: 768px) {
-  .targetes {
-    flex-direction: column;
-    align-items: center;
-  }
+    .barranavegacio ul {
+        display: none;
+        flex-direction: column;
+        background: rgb(236, 236, 236);
+        position: absolute;
+        top: 60px;
+        right: 0;
+        width: 200px;
+        padding: 30px;
+        box-shadow: 0px 0px 15px rgba(0,0,0,0.3);
+        border-radius: 15px;
+    }
 
-  .targeta {
-    width: 90%;
-  }
+    .barranavegacio ul.active {
+        display: flex;
+    }
+
+    .hamburguesa {
+        display: block;
+        margin-right: 20px;
+    } 
+
+    .targetes {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .targeta {
+        width: 90%;
+    }
 }
 
 
